--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     Create User
                 </a>
             </div>
-            <div id="modalone" class="usermodal">
+            <div id="modalone" class="usermodal open">
                 <div class="usermodal__body">
                     <div class="usermodal__content">
                         <a 
@@ -101,9 +101,9 @@
                                         Role:
                                     </label>
                                     <select id="roles" class="form-select">
-                                        <option selected>Chouse your role</option>
-                                        <option value="1">Admin</option>
-                                        <option value="2">Regular</option>
+                                        <option selected value="Chouse your role">Chouse your role</option>
+                                        <option value="Admin">Admin</option>
+                                        <option value="Regular">Regular</option>
                                     </select>
                                 </div>
                                 <div class="form__content">
@@ -112,8 +112,7 @@
                                         id="notes" 
                                         class="form-control" 
                                         placeholder="Note yourself"
-                                        style="height: 100px">
-                                    </textarea>
+                                        style="height: 100px"></textarea>
                                 </div>
                                 <div class="col-12 usermodal__btn d-flex justify-content-end">
                                     <button 
