--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     Create User
                 </a>
             </div>
-            <div id="modalone" class="usermodal open">
+            <div id="modalone" class="usermodal">
                 <div class="usermodal__body">
                     <div class="usermodal__content">
                         <a 
@@ -101,7 +101,7 @@
                                         Role:
                                     </label>
                                     <select id="roles" class="form-select">
-                                        <option selected value="Chouse your role">Chouse your role</option>
+                                        <option selected>Chouse your role</option>
                                         <option value="Admin">Admin</option>
                                         <option value="Regular">Regular</option>
                                     </select>
