--- a/index.html
+++ b/index.html
@@ -129,7 +129,9 @@
         </div>
         <div class="message message__hide"></div>
     </div>
-    <script src="./validation.js"></script>
-    <script src="./main.js"></script>
+    <script src="./index.js"></script>
+    <script type="module" src="./js/validation.js"></script>
+    <script type="module" src="./js/modal.js"></script>
+    
 </body>
 </html>
