--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         </div>
         <div class="message message__hide"></div>
     </div>
-    <script src="./index.js"></script>
+    <script type="module" src="./index.js"></script>
     <script type="module" src="./js/validation.js"></script>
     <script type="module" src="./js/modal.js"></script>
     
