--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-12 text-center mt-5">
+            <div class="col-12 text-center my-5">
                 <a 
-                    href="#modalone"
+                    href="#modal"
                     id="showModal" 
                     class="usermodal__link btn btn-primary">
                     Create User
                 </a>
             </div>
-            <div id="modalone" class="usermodal">
+            <div id="modal" class="usermodal">
                 <div class="usermodal__body">
                     <div class="usermodal__content">
                         <a 
@@ -128,6 +128,23 @@
             </div>
         </div>
         <div class="message message__hide"></div>
+        <div class="row">
+            <table class="table">
+                <thead>
+                  <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">FirstName</th>
+                    <th scope="col">LastName</th>
+                    <th scope="col">PhoneNumber</th>
+                    <th scope="col">Email</th>
+                    <th scope="col">Role</th>
+                    <th scope="col">Note</th>
+                  </tr>
+                </thead>
+                <tbody class="dataUser">
+                </tbody>
+            </table>
+        </div>
     </div>
     <script src="./index.js"></script>
     
