--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         </div>
         <div class="message message__hide"></div>
         <div class="row">
-            <table class="table">
+            <table class="table table-dark table-striped">
                 <thead>
                   <tr>
                     <th scope="col">#</th>
