add in OpenServer

--- a/index.html
+++ b/index.html
@@ -122,12 +122,12 @@
                                             placeholder="Note yourself"></textarea>
                                     </div>
                                 </div>
-                                <div class="col-12 usermodal__btn d-flex justify-content-between">
-                                    <a
+                                <div class="col-12 form__footer">
+                                    <button
                                         id="usermodalClose" 
-                                        class="btn btn-primary close__modal">
+                                        class="btn btn-secondary close__modal">
                                         Close
-                                    </a>
+                                    </button>
                                     <button 
                                         type="submit" 
                                         class="btn btn-primary">
@@ -152,6 +152,7 @@
                         <th scope="col">Email</th>
                         <th scope="col">Role</th>
                         <th scope="col">Note</th>
+                        <th scope="col">Actions</th>
                     </tr>
                 </thead>
                 <tbody class="dataUser">
