--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             </table>
         </div>
     </div>
-    <script src="./index.js"></script>
+    <script type="module" src="./index.js"></script>
     
 </body>
 </html>
