--- a/index.html
+++ b/index.html
@@ -191,10 +191,12 @@
                                         Image
                                     </label>
                                     <input 
-                                        type="file" 
+                                        type="text" 
                                         name="file" 
                                         class="form__input  form-control"
-                                        id="imgFile">
+                                        id="imgFile"
+                                        value="./img/avatar.png"
+                                        >
                                 </div>
                             </div>
                             <div class="col-12 form__footer">
